--- a/src/views/transfer.ejs
+++ b/src/views/transfer.ejs
@@ -7,7 +7,7 @@
   <% } %>
   <span class="error"></span>
 
-  <form method='post' action='/transfer' id="transferForm">
+  <form method='post' action='/services/transfer' id="transferForm">
     <span>Transfer From: </span> 
     <select name='from' id='from' required>
       <option value="checking">Checking</option>
